@@ -1443,7 +1443,39 @@ name|oMatches
 decl_stmt|;
 name|GroupCommand
 name|groupCommand
+decl_stmt|;
+if|if
+condition|(
+name|oNGroups
+operator|!=
+literal|null
+condition|)
+block|{
+name|Integer
+name|iNGroups
 init|=
+operator|(
+name|Integer
+operator|)
+name|oNGroups
+decl_stmt|;
+name|groupCommand
+operator|=
+operator|new
+name|GroupCommand
+argument_list|(
+name|fieldName
+argument_list|,
+name|iMatches
+argument_list|,
+name|iNGroups
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|groupCommand
+operator|=
 operator|new
 name|GroupCommand
 argument_list|(
@@ -1451,7 +1483,8 @@ name|fieldName
 argument_list|,
 name|iMatches
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 name|SolrDocumentList
 name|docList
 init|=
