@@ -72,6 +72,20 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrDocumentList
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|DateUtil
@@ -2239,6 +2253,406 @@ argument_list|()
 operator|.
 name|getNumFound
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testSimpleGroupResponse
+specifier|public
+name|void
+name|testSimpleGroupResponse
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|XMLResponseParser
+name|parser
+init|=
+operator|new
+name|XMLResponseParser
+argument_list|()
+decl_stmt|;
+name|InputStream
+name|is
+init|=
+operator|new
+name|SolrResourceLoader
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|openResource
+argument_list|(
+literal|"solrj/sampleSimpleGroupResponse.xml"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|is
+argument_list|)
+expr_stmt|;
+name|Reader
+name|in
+init|=
+operator|new
+name|InputStreamReader
+argument_list|(
+name|is
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|response
+init|=
+name|parser
+operator|.
+name|processResponse
+argument_list|(
+name|in
+argument_list|)
+decl_stmt|;
+name|in
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|QueryResponse
+name|qr
+init|=
+operator|new
+name|QueryResponse
+argument_list|(
+name|response
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|qr
+argument_list|)
+expr_stmt|;
+name|GroupResponse
+name|groupResponse
+init|=
+name|qr
+operator|.
+name|getGroupResponse
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|groupResponse
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|GroupCommand
+argument_list|>
+name|commands
+init|=
+name|groupResponse
+operator|.
+name|getValues
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|commands
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|commands
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|GroupCommand
+name|fieldCommand
+init|=
+name|commands
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"acco_id"
+argument_list|,
+name|fieldCommand
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|30000000
+argument_list|,
+name|fieldCommand
+operator|.
+name|getMatches
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|5687
+argument_list|,
+name|fieldCommand
+operator|.
+name|getNGroups
+argument_list|()
+operator|.
+name|intValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Group
+argument_list|>
+name|fieldCommandGroups
+init|=
+name|fieldCommand
+operator|.
+name|getValues
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|fieldCommandGroups
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"acco_id"
+argument_list|,
+name|fieldCommandGroups
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getGroupValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrDocumentList
+name|documents
+init|=
+name|fieldCommandGroups
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getResult
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|documents
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|10
+argument_list|,
+name|documents
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"116_AR"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"116_HI"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"953_AR"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"953_HI"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|3
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"954_AR"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|4
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"954_HI"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|5
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"546_AR"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|6
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"546_HI"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|7
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"708_AR"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|8
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"708_HI"
+argument_list|,
+name|documents
+operator|.
+name|get
+argument_list|(
+literal|9
+argument_list|)
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"acco_id"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
